--- a/nft-dapp-frontend/package.json
+++ b/nft-dapp-frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -16,3 +17,4 @@
     "web3modal": "^1.9.12"
   }
 }
+
