--- a/nft-dapp-frontend/package.json
+++ b/nft-dapp-frontend/package.json
@@ -6,9 +6,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "lint": "next lint"
-  },
+    "export": "next export"  
+},
   "dependencies": {
     "ethers": "^5.7.2",
     "next": "13.2.4",
